--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: Blog
-author: Daniel Oran
-description: "Spanning the globe to bring you the constant variety of ... whatever."
+title: Daniel Oran
+author: 
+description: 
