--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ author: ""
 description: ""
 
 nav:
-  - title: Home
-    url: /
+  - title: Contact
+    url: /contact/
   - title: About
     url: /about/
+  - title: Home
+    url: /
