--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ nav:
   - title: Home
     url: /
   - title: About
-    url: /1-about/
+    url: /about/
   - title: Contact
-    url: /2-contact/
+    url: /contact/
